<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Github User App</string>

    <!-- String for items in recycler view github users -->
    <string name="rv_item_imgdesc">User Avatar</string>
    <string name="rv_item_username">User Name</string>

    <!--  String for items in option menu-->
    <string name="option_searchhint">Search Username</string>
    <string name="option_changelang">Change Language</string>
    <string name="option_setting">Settings</string>

    <!--  String for items in Main Activity-->
    <string name="item_searchresult">User Not Found</string>

    <!--  String for items in Detail Activity -->
    <string name="detail_item_name">Name</string>
    <string name="detail_item_username">Username</string>
    <string name="detail_item_useremail"> Email@Email.com</string>
    <string name="detail_item_userlocation">Town, Country</string>
    <string name="detail_item_usercompany">PT Company LTE</string>
    <string name="detail_item_nullname">Name Not Set</string>
    <string name="detail_name_nullemail">Email Not Set</string>
    <string name="detail_name_nulllocation">Location Not Set</string>
    <string name="detail_name_nullcompany">Company Not Set</string>
    <string name="detail_favorite_yes">Added To Favorite</string>
    <string name="detail_favorite_no">Removed From Favorite</string>

    <!-- String for Follower Fragment -->
    <string name="follower_title">Followers</string>

    <!--  String for Following Fragment  -->
    <string name="following_title">Following</string>

    <!--  String for Settings Activity  -->
    <string name="settings_txt_reminder">Everyday Reminder</string>
    <string name="settings_txt_alarm">Time Not Set</string>
    <string name="settings_btn_enable">Set Repeating Reminder</string>
    <string name="settings_btn_disable">Disable Repeating Reminder</string>

    <!--  String for Notification-->
    <string name="notif_title">Daily Reminder</string>
    <string name="notif_message">Here is the daily reminder to open Github User App</string>

    <!-- String for Favorite Activity -->
    <string name="favorite_title">Favorite List</string>
    <string name="option_favorite_hint">Favorite</string>
</resources>