<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".SettingsActivity">


    <TextView
        android:id="@+id/settings_remindertitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_txt_reminder"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/settings_imgclock"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginTop="8dp"
        android:contentDescription="Clock Image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_remindertitle"
        app:srcCompat="@drawable/ic_access_time_black" />

    <TextView
        android:id="@+id/settings_timetitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/settings_txt_alarm"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/settings_imgclock"
        app:layout_constraintTop_toTopOf="@+id/settings_imgclock" />

    <Button
        android:id="@+id/settings_enablereminder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/settings_btn_enable"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_imgclock" />

    <Button
        android:id="@+id/settings_disablereminder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/settings_btn_disable"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/settings_enablereminder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_imgclock" />

</androidx.constraintlayout.widget.ConstraintLayout>