<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".DetailActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/detail_item_img"
        android:layout_width="150dp"
        android:layout_height="160dp"
        android:src="@color/colorAccent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/detail_item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_toEndOf="@+id/detail_item_img"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/detail_item_img"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/detail_item_name" />

    <TextView
        android:id="@+id/detail_item_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/detail_item_name"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@+id/detail_item_img"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toEndOf="@+id/detail_item_img"
        app:layout_constraintTop_toBottomOf="@+id/detail_item_name"
        tools:text="@string/detail_item_username" />

    <TextView
        android:id="@+id/detail_item_useremail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/detail_item_username"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@+id/detail_item_img"
        android:textColor="@android:color/black"
        app:drawableStartCompat="@drawable/ic_email_black"
        app:layout_constraintStart_toEndOf="@+id/detail_item_img"
        app:layout_constraintTop_toBottomOf="@+id/detail_item_username"
        tools:text="@string/detail_item_useremail" />

    <TextView
        android:id="@+id/detail_item_userlocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/detail_item_useremail"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@+id/detail_item_img"
        android:textColor="@android:color/black"
        app:drawableStartCompat="@drawable/ic_location_black"
        app:layout_constraintStart_toEndOf="@+id/detail_item_img"
        app:layout_constraintTop_toBottomOf="@+id/detail_item_useremail"
        tools:text="@string/detail_item_userlocation" />

    <TextView
        android:id="@+id/detail_item_usercompany"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/detail_item_userlocation"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@+id/detail_item_img"
        android:textColor="@android:color/black"
        app:drawableStartCompat="@drawable/ic_company_black"
        app:layout_constraintStart_toEndOf="@+id/detail_item_img"
        app:layout_constraintTop_toBottomOf="@+id/detail_item_userlocation"
        tools:text="@string/detail_item_usercompany" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabsDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/detail_item_usercompany" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPagerDetail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="240dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tabsDetail"
        tools:layout_editor_absoluteX="16dp">

    </androidx.viewpager.widget.ViewPager>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/detail_item_notfavbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_favorite_black" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/detail_item_yesfavbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_favorite_red" />



</androidx.constraintlayout.widget.ConstraintLayout>